[package]
name = "updateme"
version = "0.1.0"
edition = '2021'
authors = ["Ethan Stoneman <ethan.stoneman-1@colorado.edu>"]
description = "updates several key components of my personal laptop (MacOS 14.3)"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
exclude = ["meta.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
json = "0.12.4"
